cosmos-iam-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmos-iam-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosmos-iam-service
  template:
    metadata:
      labels:
        app: cosmos-iam-service
    spec:
      containers:
        - name: cosmos-iam-service
          image: amdevops36/cosmos-iam-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: cosmos-iam-service
  labels:
    app: cosmos-iam-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: cosmos-iam-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmos-iam-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: cosmos-iam-service
                port:
                  number: 8081

          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: cosmos-iam-service
                port:
                  number: 8081

          - path: /q/openapi
            pathType: Prefix
            backend:
              service:
                name: cosmos-iam-service
                port:
                  number: 8081

          - path: /API
            pathType: Prefix
            backend:
              service:
                name: cosmos-iam-service
                port:
                  number: 8081
